--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+
 h1 {
     color: peachpuff;
     position: center;
@@ -8,5 +9,5 @@ Body{
     background-color: rgba(159, 243, 195, 0.777);
     height: 1px;
     font-size: large;
-    font-family: he;
+    font-family:Arial, Helvetica, sans-serif;
 }
