--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,16 @@ h1 {
     
 }
 
+h2 {color: aquamarine;
+    position: center;
+}
+
+h3 { color:aqua
+}
+
 Body{
-    background-color: rgba(159, 243, 195, 0.777);
+    background-color: rgba(154, 42, 185, 0.777);
     height: 1px;
     font-size: large;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
